test-suite/tests/snapshots/cli_kte_tests__kte4002_no_fields_remain.snap
---
source: test-suite/tests/cli_kte_tests.rs
expression: result.stderr
---
KTE4002

  × Omit would remove all fields from ''
   ╭─[./tmp/cli_test_kte4002_no_fields_remain/pkg/schema/types.ks:3:8]
 1 │     namespace types;
 2 │     
 3 │ ╭─▶ struct User {
 4 │ ├─▶     id: u64,
   · ╰──── Omit would remove all fields from ''
 5 │         name: str
 6 │     };
 7 │     
 8 │     type EmptyUser = Omit[User, id | name];
   ╰────
  help: ensure at least one field remains
